# Another-Noun-Phrase-Extractor

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  complex_test_text.txt  gui_setup_cx.py  nptest.txt  pyproject.toml  requirements-dev.txt  requirements.txt  test_anpe_script.py  test_normalization_script.py
.github/workflows/: python-package.yml
anpe/: __init__.py  cli.py  extractor.py
anpe/config/: __init__.py  default.py
anpe/utils/: __init__.py  analyzer.py  anpe_logger.py  clean_models.py  export.py  logging.py  model_finder.py  setup_models.py
docs/: CODE_EXAMPLES.md  GUI_IMPROVEMENTS_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  NEXT_STEPS.md  extraction_workflow.md  installer_dev_current_status.md  installer_gui.md  installer_gui_v2.md  refactoring_summary_span_analysis.md  structure_patterns.md  tests_v2_evaluation.md
test_doc/: np_tolerance_test.txt
tests/: __init__.py  conftest.py  test_cli.py  test_extractor.py  test_integration.py  test_utils.py
tests/feature/: test_feature_cli.py  test_feature_extractor.py
tests/feature/cli_output/: test_input_file.txt  test_output_from_file.json  test_output_metadata.json  test_output_nested.json  test_output_simple.csv  test_output_simple.json
tests/integration/: test_cli.py
tests/unit/: test_analyzer.py  test_export.py
tools/: anpe_gui.spec  package.py
