[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "anpe"
version = "0.3.0"
authors = [
    {name = "Richard", email = "rcverse6@gmail.com"},
]
description = "Accurately extract complete noun phrase with customisation."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = {text = "MIT"}
keywords = ["nlp", "parsing", "noun phrase", "linguistics", "text processing", "natural language processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Text Processing :: Linguistic",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]
dependencies = [
    "spacy>=3.5.0",
    "benepar>=0.2.0",
    "nltk>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/rcverse/another-noun-phrase-extractor"
Documentation = "https://github.com/rcverse/another-noun-phrase-extractor"
"Bug Tracker" = "https://github.com/rcverse/another-noun-phrase-extractor/issues"
"Source Code" = "https://github.com/rcverse/another-noun-phrase-extractor"

[project.scripts]
anpe = "anpe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["anpe"]

[tool.hatch.build.targets.sdist]
include = [
    "anpe",
    "README.md",
    "LICENSE",
    "MANIFEST.in",
]
